# see_code

./: CMakeLists.txt  README.md  makefile.bak  see_code.c  see_code.lua.bak  see_code_setup.sh
plugin/: see_code.lua
scripts/: install.sh
src/: CMakeLists.txt
src/core/: app.c  app.h  config.h  main.c
src/data/: diff_data.c  diff_data.h  diff_parser.c  diff_parser.h
src/gui/: CMakeLists.txt  renderer.c  renderer.h  termux_gui_backend.c  termux_gui_backend.h  ui_manager.c  ui_manager.h  ui_manager_core.c  ui_manager_input.c  ui_manager_render.c  ui_manager_widgets.c  widgets.c  widgets.h
src/gui/renderer/: CMakeLists.txt  freetype_text_draw.c  freetype_text_draw.h  freetype_text_renderer_atlas.c  freetype_text_renderer_draw.c  freetype_text_renderer_init.c  gl_context.c  gl_context.h  gl_primitives.c  gl_primitives.h  gl_shaders.c  gl_shaders.h  text_renderer.c  text_renderer.h  text_renderer_core.c  text_renderer_draw.c  text_renderer_explanation_plug.c
src/gui/renderer/text_renderer/: CMakeLists.txt
src/network/: socket_server.c  socket_server.h
src/utils/: deps_check.c  deps_check.h  logger.c  logger.h
